--- a/JS/V1/public_html/3D.html
+++ b/JS/V1/public_html/3D.html
@@ -27,16 +27,16 @@
                     </div>
                     <div class="d-block mb-1">
                         <textarea id="form_bathymetry__data_input" class="form-control form-control-sm" style="width: 90px; height: 16px;" placeholder="Logic log"></textarea> 
-                    </div>
+                    </div>                    
                     <div class="d-block">
                         <span id="form_bathymetry__btn_ok" class="btn btn-success btn-sm">1. Ok</span>
-                    </div>
+                    </div>                     
                     <hr class="my-1">
                     <div class="d-block"> 
                         <b>Resolution for plane</b><br>                        
-                        dШ.(lat) <input type="number" class="form-control d-inline-block form-control-sm" min="0.000001" value="0.00001" step="0.000001" id="sonar__resolution_dLat" style="width: 90px">                                 
+                        dLat &nbsp;<input type="number" class="form-control d-inline-block form-control-sm" min="0.000001" value="0.00001" step="0.000001" id="sonar__resolution_dLat" style="width: 90px">                                 
                         <br>
-                        dД.(lng) <input type="number" class="form-control d-inline-block form-control-sm" min="0.000001" value="0.000016" step="0.000001" id="sonar__resolution_dLng" style="width: 90px">   
+                        dLng <input type="number" class="form-control d-inline-block form-control-sm" min="0.000001" value="0.000016" step="0.000001" id="sonar__resolution_dLng" style="width: 90px">   
                         <br>
                         Dot, px <input type="number" class="form-control d-inline-block form-control-sm" min="1" value="10" step="1" id="sonar__resolution_dot_px" style="width: 90px">   
                     </div>
@@ -53,7 +53,7 @@
                         Radius m                        
                         <input type="number" class="form-control d-inline-block form-control-sm" min="0.1" value="3" step="0.1" id="sonar__extrapolation_radius_m" style="width: 90px">                                 
                         <br>
-                        Step lat                        
+                        Step lat &nbsp;                       
                         <input type="number" class="form-control d-inline-block form-control-sm" min="0.000001" value="0.00001" step="0.000001" id="sonar__extrapolation_lat_step" style="width: 90px">                                 
                         <br>
                         Step lng                      
@@ -63,19 +63,19 @@
                     </div>
                     <hr class="my-1">
                     <div class="d-block">
-                        <b>Захват сечения</b><br>
-                        ±Ш.(lat) <input type="number" class="form-control d-inline-block form-control-sm" min="0" value="0.00001" step="0.000001" id="sonar__section_dLat_limit" style="width: 90px">                                 
+                        <b>Section</b><br>
+                        ±lat &nbsp;<input type="number" class="form-control d-inline-block form-control-sm" min="0" value="0.00001" step="0.000001" id="sonar__section_dLat_limit" style="width: 90px">                                 
                         <br>
-                        ±Д.(lng) <input type="number" class="form-control d-inline-block form-control-sm" min="0" value="0.00001" step="0.000001" id="sonar__section_dLng_limit" style="width: 90px">   
+                        ±lng <input type="number" class="form-control d-inline-block form-control-sm" min="0" value="0.00001" step="0.000001" id="sonar__section_dLng_limit" style="width: 90px">   
                         <br>                                 
                         <input type="radio" name="sonar__section_isVertical" value="0" checked> --- &nbsp;&nbsp;
                         <input type="radio" name="sonar__section_isVertical" value="1"> | 
                         <br>
-                        <span id="sonar__section_ok" class="btn btn-success btn-sm">3. Apply & init</span>   
+                        <span id="sonar__section_ok" class="btn btn-success btn-sm">3. Apply & begin</span>   
                     </div>
                     <hr class="my-1">
                     <div class="d-block">
-                        <b>Глубина</b><br>
+                        <b>Depth</b><br>
                         <div id="sonar__palette_depth_min_text" class="d-inline-block" style="width: 50px;"></div>
                         <div class="d-inline-block"><div id="sonar__palette_depth"></div></div>
                         <div id="sonar__palette_depth_max_text" class="d-inline-block"></div>
@@ -183,7 +183,7 @@
                 let sonar__lat_min = 999, sonar__lng_min = 999, sonar__lat_max = 0, sonar__lng_max = 0;
                 let sonar__getColor_depth_m_dx = 1;
                 let sonar__mks2px_fullScale_dx = 1;
-                let sonar__pulses_block_h_px = 100;
+                let sonar__pulses_block_h_px = 400;
                 const sonar__mks2m = 1367.0;
                 let sonar__resolution_dLat = 0;
                 let sonar__resolution_dLng = 0;
@@ -282,13 +282,19 @@
                     });
                 }
                 function sonar__point_selected_latlng() {
-                    $('[sonar__point_selected_latlng]').click(function () {
-                        const el = $(this);
-                        $('#sonar__point_selected_latlng').html(el.attr('title'));
-                    });
+                    /*$('[sonar__point_selected_latlng][todo]').click(function () {
+                     const el = $(this);
+                     $('#sonar__point_selected_latlng').html(el.attr('title'));
+                     });*/
                 }
 //==================================== START ===============================================================================================================================
                 function sonar__real_process() {
+                    sonar__plane_pointsLatLng = [];
+                    sonar__map_pointsLatLng = [];
+                    sonar__section_pointsLatLng = [];
+                    sonar__extrapolation_pointsLatLng = [];
+                    sonar__section_pointsLatLng_used = [];
+
                     sonar__resolution_calc();
 
                     sonar__plane_points_init(sonar__real_pointsLatLng);
@@ -303,6 +309,12 @@
                     sonar__point_selected_latlng();
                 }
                 function sonar__extrapolation_process() {
+                    sonar__plane_pointsLatLng = [];
+                    sonar__map_pointsLatLng = [];
+                    sonar__section_pointsLatLng = [];
+                    sonar__extrapolation_pointsLatLng = [];
+                    sonar__section_pointsLatLng_used = [];
+
                     sonar__resolution_calc();
 
                     sonar__extrapolation_init();
@@ -382,15 +394,17 @@
                     }
                     const depth_color = sonar__getColor_depth_m(data.depthM);
                     const left_px = Math.round(sonar__section_isVertical ? sonar__getOffsetLat_px(lat) : sonar__getOffsetLng_px(lng));
-                    let mt_px = Math.round(5 + sonar__mks2px_fullScale(data.depth_mks, sonar__depth_max * sonar__mks2m));
+                    let mt_px = Math.round(5 + sonar__mks2px_fullScale(data.depth_mks, sonar__depth_max * sonar__mks2m));                    
 
-                    let html = '<div class="sonar__section_pulseBottom" sonar__point_selected_latlng title="' + (Math.round(data.depthM * 100) / 100) + 'm  lat=' + lat + ' lng=' + lng + ' " lat="' + lat + '" lng="' + lng + '" style="left:' + left_px + 'px; top:' + mt_px + 'px; background-color:' + depth_color + '; width:' + sonar__resolution_dot_px + 'px; "></div>';
+                    let html = '<div class="sonar__section_pulseBottom" sonar__point_selected_latlng title="' + (Math.round(data.depthM * 100) / 100) + 'm  lat=' + lat + ' lng=' + lng + ' " style="left:' + left_px + 'px; top:' + mt_px + 'px; background-color:' + depth_color + '; width:' + sonar__resolution_dot_px + 'px; "></div>';
                     for (const pulse of data.pulses) {
-                        if (pulse.R >= (data.depth_mks - 100)) {
-                            continue; //only fish over bottom                            
+                        if (pulse.R >= (data.depth_mks+150)) {
+                            mt_px = sonar__mks2px_fullScale(pulse.R); //fish over bottom                           
+                        } else {
+                            mt_px = sonar__mks2px_fullScale(0.3*pulse.R + data.depth_mks); //under bottom
                         }
                         const pulse_color = sonar__getColor_power_mks(pulse.W, sonar__colors_power_isBW);
-                        mt_px = sonar__mks2px_fullScale(pulse.R);
+                        
                         html += '<div class="sonar__section_pulse" sonar__point_selected_latlng title="' + (Math.round((pulse.R / sonar__mks2m) * 100) / 100) + 'm  lat=' + lat + ' lng=' + lng + '  R=' + pulse.R + ' W=' + pulse.W + '" w_mks="' + pulse.W + '" style="left:' + left_px + 'px; top:' + mt_px + 'px; width:' + (sonar__resolution_dot_px - 2) + 'px; background-color:' + pulse_color + '; z-index:' + pulse.W + '; "></div>';
                     }
                     return html;
@@ -416,33 +430,20 @@
                     const depth_color = sonar__getColor_depth_m(data.depthM);
                     const left_px = sonar__getOffsetLng_px(lng);
                     const top_px = sonar__getOffsetLat_px(lat);
+                    let mt_px_coef_overUnderBottom = 1;
 
-                    let html = '<div sonar__point_selected_latlng title="' + (Math.round((data.depthM) * 100) / 100) + 'm  lat=' + lat + ' lng=' + lng + ' " class="sonar__plane_point_pulses" lat="' + lat + '" lng="' + lng + '" style="left:' + left_px + 'px; top:' + top_px + 'px; width:' + sonar__resolution_dot_px + 'px; height: ' + sonar__pulses_block_h_px + 'px; ">'; //border-bottom: ' + sonar__resolution_dot_px + 'px solid ' + depth_color + ';
+                    let html = '<div sonar__point_selected_latlng title="' + (Math.round((data.depthM) * 100) / 100) + 'm  lat=' + lat + ' lng=' + lng + ' " class="sonar__plane_point_pulses" style="left:' + left_px + 'px; top:' + top_px + 'px; width:' + sonar__resolution_dot_px + 'px; height: ' + sonar__pulses_block_h_px + 'px; ">'; //border-bottom: ' + sonar__resolution_dot_px + 'px solid ' + depth_color + ';
                     for (const pulse of data.pulses) {
-                        if (pulse.R >= (data.depth_mks - 100)) {
-                            continue; //only fish over bottom                            
+                        if (pulse.R >= (data.depth_mks)) {
+                            mt_px_coef_overUnderBottom = 1; //fish over bottom                            
+                        } else {
+                            mt_px_coef_overUnderBottom = 0.5; //under bottom
                         }
-                        pulse_color = sonar__getColor_power_mks(pulse.W, sonar__colors_power_isBW); //fish over bottom                         
-                        let mt_px = sonar__mks2px_fullScale(pulse.R + (sonar__depth_max - data.depthM) * sonar__mks2m); //прижмем ко дну, а не к поверхности
+                        const pulse_color = sonar__getColor_power_mks(pulse.W, sonar__colors_power_isBW); //fish over bottom                         
+                        const mt_px = mt_px_coef_overUnderBottom * sonar__mks2px_fullScale(pulse.R); //+ (sonar__depth_max - data.depthM) * sonar__mks2m прижмем ко дну, а не к поверхности
                         html += '<div class="sonar__plane_point_pulse" sonar__point_selected_latlng title="' + (Math.round((pulse.R / sonar__mks2m) * 100) / 100) + 'm  lat=' + lat + ' lng=' + lng + '  R=' + pulse.R + ' W=' + pulse.W + '" w_mks="' + pulse.W + '" style="top:' + mt_px + 'px; width:' + (sonar__resolution_dot_px - 2) + 'px; background-color:' + pulse_color + '; "></div>';
                     }
                     html += '</div>';
-
-                    /*html += '<div class="logic_pulsesFull_block" lat="' + lat + '" lng="' + lng + '" style="left:' + left_px + 'px; top:' + top_px + 'px; box-shadow: 0px 10px 0px -2px ' + depth_color + '; width:' + sonar__resolution_dot_px + 'px; ">';
-                     for (const pulse of data.pulses) {
-                     let pulse_opacity, pulse_color;
-                     if (pulse.R >= (data.depth_mks - 100)) {
-                     pulse_color = depth_color; //bottom and under
-                     pulse_opacity = 1;
-                     } else {
-                     pulse_color = sonar__getColor_power_mks(pulse.W, true); //fish over bottom  
-                     pulse_opacity = 1;
-                     }
-                     let mt_px = sonar__mks2px_fullScale(pulse.R);
-                     let h_px = Math.max(sonar__mks2px_fullScale(pulse.W + pulse.R) - mt_px, 2);
-                     html += '<div class="logic_pulseFull" title="R=' + pulse.R + ' W=' + pulse.W + ' ' + (Math.round((pulse.R / sonar__mks2m) * 100) / 100) + 'm" w_mks="' + pulse.W + '" style="top:' + mt_px + 'px; height:' + h_px + 'px; width:' + (sonar__resolution_dot_px - 2) + 'px; background-color:' + pulse_color + '; opacity: ' + pulse_opacity + ' "></div>';
-                     }
-                     html += '</div>';*/
 
                     html += '<div class="sonar__plane_point_dot" sonar__point_selected_latlng lat="' + lat + '" lng="' + lng + '" title="' + (Math.round(data.depthM * 100) / 100) + 'm lat=' + lat + ' lng=' + lng + ' " style="left:' + left_px + 'px; top:' + (sonar__pulses_block_h_px + top_px) + 'px; background-color:' + depth_color + '; width:' + sonar__resolution_dot_px + 'px; height:' + sonar__resolution_dot_px + 'px; ">';
                     html += '</div>';
@@ -738,12 +739,12 @@
 
                         let depth_mks = 0;
                         for (const pulse of pulses) {
-                            const pulse_w_realBottom_mks_min = sonar__getPulse_w_realBottom_mks_min(pulse.R);                            
+                            const pulse_w_realBottom_mks_min = sonar__getPulse_w_realBottom_mks_min(pulse.R);
                             if (pulse.W >= pulse_w_realBottom_mks_min) {
-                                depth_mks = pulse.R;                                
+                                depth_mks = pulse.R;
                                 break;
                             }
-                        }                        
+                        }
 
                         //real point
                         let lat = parseFloat(raw[34]) || 0;
@@ -804,9 +805,9 @@
                     $('#sonar__palette_depth_max_text').html(Math.round(sonar__depth_max * 100) / 100 + 'm');
 
                     sonar__getColor_depth_m_dx = (sonar__depth_max - sonar__depth_min) / sonar__colors_depth.length;
-                    sonar__mks2px_fullScale_dx = (depth_max_limit * sonar__mks2m) / sonar__pulses_block_h_px;
+                    sonar__mks2px_fullScale_dx = (3 * sonar__depth_max * sonar__mks2m) / sonar__pulses_block_h_px;
                 }
-                function sonar__getPulse_w_realBottom_mks_min(depth_mks) {                    
+                function sonar__getPulse_w_realBottom_mks_min(depth_mks) {
                     if (depth_mks < 1500) {
                         return 1200;
                     }
