--- a/JS/V1/public_html/3D.html
+++ b/JS/V1/public_html/3D.html
@@ -184,6 +184,8 @@
                 let sonar__getColor_depth_m_dx = 1;
                 let sonar__mks2px_fullScale_dx = 1;
                 let sonar__pulses_block_h_px = 300;
+                const sonar__mks2px_fullScale_multiplier_vertical = 2; //draw on block height = x * depth_max_limit 
+                const sonar__pulse_underBottom_compression_vertical = 4; //compress pulses under bottom
                 const sonar__mks2m = 1367.0;
                 let sonar__resolution_dLat = 0;
                 let sonar__resolution_dLng = 0;
@@ -401,7 +403,7 @@
                         if (pulse.R <= (data.depth_mks + 150)) {
                             mt_px = sonar__mks2px_fullScale(pulse.R); //fish over bottom                           
                         } else {
-                            mt_px = sonar__mks2px_fullScale(0.2 * pulse.R + data.depth_mks); //under bottom  уплотняем картинку в Х раз 
+                            mt_px = sonar__mks2px_fullScale((pulse.R / sonar__pulse_underBottom_compression_vertical) + data.depth_mks); //under bottom  уплотняем картинку в Х раз 
                         }
                         const pulse_color = sonar__getColor_power_mks(pulse.W, sonar__colors_power_isBW);
                         html += '<div class="sonar__section_pulse" sonar__point_selected_latlng title="' + (Math.round((pulse.R / sonar__mks2m) * 100) / 100) + 'm  lat=' + lat + ' lng=' + lng + '  R=' + pulse.R + ' W=' + pulse.W + '" w_mks="' + pulse.W + '" style="left:' + left_px + 'px; top:' + mt_px + 'px; width:' + (sonar__resolution_dot_px - 2) + 'px; background-color:' + pulse_color + '; z-index:' + pulse.W + '; "></div>';
@@ -429,7 +431,7 @@
                     const depth_color = sonar__getColor_depth_m(data.depthM);
                     const left_px = sonar__getOffsetLng_px(lng);
                     const top_px = sonar__getOffsetLat_px(lat);
-                    
+
                     let html = '<div sonar__point_selected_latlng title="' + (Math.round((data.depthM) * 100) / 100) + 'm  lat=' + lat + ' lng=' + lng + ' " class="sonar__plane_point_pulses" style="left:' + left_px + 'px; top:' + top_px + 'px; width:' + sonar__resolution_dot_px + 'px; height: ' + sonar__pulses_block_h_px + 'px; ">'; //border-bottom: ' + sonar__resolution_dot_px + 'px solid ' + depth_color + ';
                     for (const pulse of data.pulses) {
                         if (pulse.R <= (data.depth_mks + 150)) {
@@ -438,7 +440,7 @@
                             continue; //under bottom
                         }
                         const pulse_color = sonar__getColor_power_mks(pulse.W, sonar__colors_power_isBW); //fish over bottom                         
-                        const mt_px = sonar__mks2px_fullScale(pulse.R); //+ (sonar__depth_max - data.depthM) * sonar__mks2m прижмем ко дну, а не к поверхности
+                        const mt_px = sonar__mks2px_fullScale(pulse.R + (sonar__depth_max - data.depthM) * sonar__mks2m); // прижмем ко дну, а не к поверхности
                         html += '<div class="sonar__plane_point_pulse" sonar__point_selected_latlng title="' + (Math.round((pulse.R / sonar__mks2m) * 100) / 100) + 'm  lat=' + lat + ' lng=' + lng + '  R=' + pulse.R + ' W=' + pulse.W + '" w_mks="' + pulse.W + '" style="top:' + mt_px + 'px; width:' + (sonar__resolution_dot_px - 2) + 'px; background-color:' + pulse_color + '; "></div>';
                     }
                     html += '</div>';
@@ -757,7 +759,7 @@
                             const idx = lat + '_' + lng;
                             if (sonar__real_pointsLatLng.hasOwnProperty(idx)) {
                                 depthM = (sonar__real_pointsLatLng[idx].depthM + depthM) / 2.0;
-                                pulses = pulses.concat(sonar__real_pointsLatLng[idx].pulses);
+                                //pulses = pulses.concat(sonar__real_pointsLatLng[idx].pulses);  Если складывать, то уплотняется картинка, хотя реально там такой плотности нет.
                             }
                             const point = {
                                 depthM: depthM,
@@ -803,7 +805,7 @@
                     $('#sonar__palette_depth_max_text').html(Math.round(sonar__depth_max * 100) / 100 + 'm');
 
                     sonar__getColor_depth_m_dx = (sonar__depth_max - sonar__depth_min) / sonar__colors_depth.length;
-                    sonar__mks2px_fullScale_dx = (2 * sonar__depth_max * sonar__mks2m) / sonar__pulses_block_h_px;
+                    sonar__mks2px_fullScale_dx = (sonar__mks2px_fullScale_multiplier_vertical * sonar__depth_max * sonar__mks2m) / sonar__pulses_block_h_px;
                 }
                 function sonar__getPulse_w_realBottom_mks_min(depth_mks) {
                     if (depth_mks < 1500) {
