--- a/JS/V1/public_html/3D.html
+++ b/JS/V1/public_html/3D.html
@@ -360,7 +360,7 @@
                     //draw red RECT +_ dlat dlong in 3D-points-block in selected lat-long
                     const radius_h_px = (2 * sonar__section_dLat_limit) / sonar__pulse_size_offset_coef_lat;
                     const radius_w_px = (2 * sonar__section_dLng_limit) / sonar__pulse_size_offset_coef_lng;
-                    const radius_top_px = sonar__pulses_block_h_px + sonar__getOffsetLat_px(lat) - 0.5 * radius_h_px;
+                    const radius_top_px = parseInt(sonar__pulses_block_h_px / sonar__plane_compression_vertical + sonar__getOffsetLat_px(lat) - 0.5 * radius_h_px);
                     const radius_left_px = sonar__getOffsetLng_px(lng) - 0.5 * radius_w_px;
                     let html = '<div class="sonar__section_radius" style="left:' + radius_left_px + 'px; top:' + radius_top_px + 'px; width:' + radius_w_px + 'px; height:' + radius_h_px + 'px; ">';
                     html += '</div>';
